welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:10: error: unclosed comment
	/*droite();
        ^PictureMono:2: error: Missing closing brace `}' assumed here
override def run() {
^PictureMono:2: error: expected start of definition
override def run() {
         ^PictureMono:3: error: Missing closing brace `}' assumed here
for(i<-0 to 3) {
^PictureMono:24: error: Missing closing brace `}' assumed here
}
  ^