welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run() {
for(i<-0 to 3) {
	
	baisseBrosse() ;
	gauche();
	
	leveBrosse();
	avance();
	/*droite();
	avance();
	baisseBrosse();
	gauche();
	avance();
	leveBrosse();
	gauche();
	avance();
	baisseBrosse();
}
}
 /*
